Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     --muted:#a8b3c7;
 
     --panel: rgba(18,20,28,.62);
-    --panel2: rgba(18,20,28,.44);
     --stroke: rgba(255,255,255,.12);
 
     --blue:#4aa3ff;
@@ -33,7 +32,7 @@
     font-family:"Segoe UI",system-ui,-apple-system,Roboto,Arial,sans-serif;
     color:var(--text);
     background:#05060a;
-    overflow-x:hidden;
+    overflow:hidden; /* for dragging (no scroll bounce) */
   }
 
   /* ===== YouTube background ===== */
@@ -41,11 +40,9 @@
   .bg iframe{
     position:absolute;
     top:50%; left:50%;
-    width: 160vw;
-    height: 90vw;
-    min-width: 160vh;
-    min-height: 90vh;
-    transform: translate(-50%,-50%);
+    width:160vw; height:90vw;
+    min-width:160vh; min-height:90vh;
+    transform:translate(-50%,-50%);
     filter: blur(6px);
     opacity:.48;
     pointer-events:none;
@@ -65,18 +62,26 @@
     mix-blend-mode: overlay;
   }
 
-  /* ===== Center ===== */
+  /* ===== Draggable stage ===== */
   .stage{
-    min-height:100%;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:30px 14px;
+    position:fixed;
+    inset:0;
+    display:block;
+  }
+
+  /* the draggable container (we move this) */
+  .dragWrap{
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    width:min(820px, calc(100% - 28px));
+    touch-action:none; /* allow pointer drag */
   }
 
   /* ===== guns.lol-ish hover: tilt + spotlight + glow ===== */
   .tilt{
-    width:min(820px, 100%);
+    width:100%;
     transform-style:preserve-3d;
     will-change:transform;
     transition:transform .14s ease;
@@ -141,7 +146,10 @@
     border-bottom:1px solid rgba(255,255,255,.08);
     user-select:none;
     gap:10px;
+    cursor: grab; /* draggable */
   }
+  .titlebar:active{ cursor: grabbing; }
+
   .titleLeft{
     display:flex;
     align-items:center;
@@ -170,11 +178,12 @@
     padding:6px 0;
     border-left:1px solid rgba(255,255,255,.06);
     color:rgba(242,246,255,.85);
+    cursor: default;
   }
   .winbtn:hover{background:rgba(255,255,255,.08)}
   .winbtn.close:hover{background:rgba(239,68,68,.25)}
 
-  /* ===== Win10 volume widget (like screenshot) ===== */
+  /* ===== Volume widget ===== */
   .volWidget{
     display:flex;
     align-items:center;
@@ -187,6 +196,7 @@
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     max-width: 280px;
+    cursor: default;
   }
   .volBtn{
     width:26px; height:26px;
@@ -201,14 +211,8 @@
   .volBtn:hover{ background: rgba(255,255,255,.08); }
   .volBtn svg{ width:15px; height:15px; opacity:.92; }
 
-  .volRange{
-    width:160px;
-    height:18px;
-    display:flex;
-    align-items:center;
-  }
+  .volRange{ width:160px; height:18px; display:flex; align-items:center; }
 
-  /* custom range (Win-ish) */
   input[type="range"]{
     -webkit-appearance:none;
     appearance:none;
@@ -224,7 +228,7 @@
     width:14px;height:14px;border-radius:999px;
     background: rgba(255,255,255,.92);
     border:1px solid rgba(0,0,0,.35);
-    box means box-shadow: 0 8px 20px rgba(0,0,0,.45);
+    box-shadow: 0 8px 20px rgba(0,0,0,.45);
   }
   input[type="range"]::-moz-range-thumb{
     width:14px;height:14px;border-radius:999px;
@@ -242,14 +246,11 @@
     font-weight:700;
     width:42px;
     text-align:right;
+    cursor: default;
   }
 
   /* ===== Symmetric content ===== */
-  .content{
-    padding:26px 22px 22px;
-    text-align:center;
-  }
-
+  .content{ padding:26px 22px 22px; text-align:center; }
   .pfp{
     width:104px; height:104px;
     margin: 6px auto 12px;
@@ -260,32 +261,13 @@
   }
   .pfp img{width:100%;height:100%;object-fit:cover;display:block}
 
-  h1{
-    margin:0;
-    font-size:24px;
-    font-weight:900;
-    letter-spacing:.2px;
-    line-height:1.15;
-  }
-  .handle{
-    margin-top:6px;
-    font-size:13px;
-    color:var(--muted);
-    font-weight:700;
-  }
-  .tagline{
-    margin-top:10px;
-    font-size:14px;
-    color:var(--muted);
-    line-height:1.5;
-  }
+  h1{ margin:0; font-size:24px; font-weight:900; letter-spacing:.2px; line-height:1.15; }
+  .handle{ margin-top:6px; font-size:13px; color:var(--muted); font-weight:700; }
+  .tagline{ margin-top:10px; font-size:14px; color:var(--muted); line-height:1.5; }
 
   .pills{
-    display:flex;
-    justify-content:center;
-    gap:10px;
-    margin-top:16px;
-    flex-wrap:wrap;
+    display:flex; justify-content:center;
+    gap:10px; margin-top:16px; flex-wrap:wrap;
   }
   .pill{
     padding:8px 12px;
@@ -294,31 +276,21 @@
     background:rgba(255,255,255,.04);
     font-size:12.5px;
     color:rgba(168,179,199,.96);
-    display:flex;
-    gap:8px;
-    align-items:center;
-    position:relative;
-    overflow:hidden;
+    display:flex; gap:8px; align-items:center;
+    position:relative; overflow:hidden;
     transition: transform .12s ease, border-color .12s ease, background .12s ease;
   }
   .pill::before{
     content:"";
-    position:absolute;
-    top:-40%;
-    left:-70%;
-    width:70%;
-    height:200%;
+    position:absolute; top:-40%; left:-70%;
+    width:70%; height:200%;
     transform: rotate(18deg);
     background: linear-gradient(90deg, transparent, rgba(255,255,255,.18), transparent);
     opacity:0;
     transition: left .38s ease, opacity .18s ease;
     pointer-events:none;
   }
-  .pill:hover{
-    transform: translateY(-1px);
-    border-color: rgba(74,163,255,.35);
-    background: rgba(74,163,255,.06);
-  }
+  .pill:hover{ transform: translateY(-1px); border-color: rgba(74,163,255,.35); background: rgba(74,163,255,.06); }
   .pill:hover::before{opacity:1; left:120%}
 
   .sDot{width:9px;height:9px;border-radius:50%;background:var(--gray)}
@@ -327,16 +299,9 @@
   .sDot.dnd{background:var(--red)}
   .sDot.offline{background:var(--gray)}
 
-  .links{
-    display:flex;
-    justify-content:center;
-    flex-wrap:wrap;
-    gap:10px;
-    margin-top:18px;
-  }
+  .links{ display:flex; justify-content:center; flex-wrap:wrap; gap:10px; margin-top:18px; }
   .btn{
-    display:inline-flex;
-    align-items:center;
+    display:inline-flex; align-items:center;
     padding:10px 12px;
     border-radius:10px;
     border:1px solid rgba(255,255,255,.12);
@@ -347,31 +312,24 @@
     font-weight:800;
     transition: transform .12s ease, border-color .12s ease, background .12s ease;
   }
-  .btn:hover{
-    transform: translateY(-1px);
-    border-color: rgba(255,255,255,.22);
-    background: rgba(255,255,255,.07);
-  }
+  .btn:hover{ transform: translateY(-1px); border-color: rgba(255,255,255,.22); background: rgba(255,255,255,.07); }
 
   .footer{
     padding:10px 15px;
     font-size:11px;
     border-top:1px solid rgba(255,255,255,.08);
-    display:flex;
-    justify-content:space-between;
+    display:flex; justify-content:space-between;
     color:var(--muted);
     background:rgba(255,255,255,.03);
   }
   .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
 
-  audio{ display:none; }
+  audio{display:none}
 
-  /* ===== click-to-enter overlay ===== */
+  /* click-to-enter */
   .gate{
-    position:fixed;
-    inset:0;
-    display:grid;
-    place-items:center;
+    position:fixed; inset:0;
+    display:grid; place-items:center;
     z-index:100;
     cursor:pointer;
     transition: opacity .35s ease;
@@ -379,26 +337,15 @@
     backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(2px);
   }
-  body.entered .gate{
-    opacity:0;
-    pointer-events:none;
-  }
+  body.entered .gate{opacity:0; pointer-events:none;}
   .gateText{
-    font-size:26px;
-    font-weight:800;
+    font-size:26px; font-weight:800;
     color: rgba(242,246,255,.95);
     text-shadow: 0 10px 30px rgba(0,0,0,.55);
     letter-spacing:.2px;
   }
-  .gateText .dots{
-    opacity:.9;
-    animation: dots 1.2s infinite;
-  }
-  @keyframes dots{
-    0%, 20% { opacity:.3 }
-    50% { opacity:1 }
-    100% { opacity:.3 }
-  }
+  .gateText .dots{ opacity:.9; animation:dots 1.2s infinite; }
+  @keyframes dots{ 0%,20%{opacity:.3} 50%{opacity:1} 100%{opacity:.3} }
 
   @media (max-width: 860px){
     .volWidget{ max-width: 220px; }
@@ -414,101 +361,84 @@
 </head>
 
 <body>
-
 <div class="bg" aria-hidden="true">
   <iframe
     src="https://www.youtube.com/embed/Ulm_Z646eBg?autoplay=1&mute=1&controls=0&rel=0&playsinline=1&loop=1&playlist=Ulm_Z646eBg&modestbranding=1&iv_load_policy=3&disablekb=1"
     title="background"
     frameborder="0"
     allow="autoplay; encrypted-media"
-    referrerpolicy="strict-origin-when-cross-origin">
-  </iframe>
+    referrerpolicy="strict-origin-when-cross-origin"></iframe>
 </div>
 <div class="bgOverlay" aria-hidden="true"></div>
 <div class="noise" aria-hidden="true"></div>
 
-<div class="gate" id="gate" aria-label="click to enter">
-  <div class="gateText">click to enter<span class="dots">...</span></div>
-</div>
+<div class="gate" id="gate"><div class="gateText">click to enter<span class="dots">...</span></div></div>
 
 <div class="stage">
-  <div class="tilt" id="tilt">
-    <section class="window">
-      <div class="titlebar">
-        <div class="titleLeft">
-          <div class="title"><div class="icon"></div> discord.exe</div>
+  <div class="dragWrap" id="dragWrap">
+    <div class="tilt" id="tilt">
+      <section class="window">
+        <div class="titlebar" id="titlebar">
+          <div class="titleLeft">
+            <div class="title"><div class="icon"></div> discord.exe</div>
 
-          <!-- Volume widget like screenshot -->
-          <div class="volWidget" title="Volume">
-            <div class="volBtn" id="muteBtn" aria-label="mute">
-              <!-- speaker icon -->
-              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-                <path d="M11 5 7.5 8H4a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h3.5L11 19V5Z" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
-                <path id="wave1" d="M14.5 9.2c.6.7.9 1.7.9 2.8s-.3 2.1-.9 2.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
-                <path id="wave2" d="M16.8 7.2c1.1 1.2 1.7 2.9 1.7 4.8s-.6 3.6-1.7 4.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" opacity=".9"/>
-              </svg>
+            <div class="volWidget" title="Volume">
+              <div class="volBtn" id="muteBtn" aria-label="mute">
+                <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                  <path d="M11 5 7.5 8H4a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h3.5L11 19V5Z" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
+                  <path id="wave1" d="M14.5 9.2c.6.7.9 1.7.9 2.8s-.3 2.1-.9 2.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+                  <path id="wave2" d="M16.8 7.2c1.1 1.2 1.7 2.9 1.7 4.8s-.6 3.6-1.7 4.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" opacity=".9"/>
+                </svg>
+              </div>
+
+              <div class="volRange">
+                <input id="vol" type="range" min="0" max="100" value="5" />
+              </div>
+
+              <div class="volPct mono" id="volPct">5%</div>
             </div>
+          </div>
 
-            <div class="volRange">
-              <input id="vol" type="range" min="0" max="100" value="55" />
+          <div class="winbtns" aria-hidden="true">
+            <div class="winbtn">—</div>
+            <div class="winbtn">▢</div>
+            <div class="winbtn close">✕</div>
+          </div>
+        </div>
+
+        <div class="content">
+          <div class="pfp"><img id="pfp" alt="pfp" src="https://cdn.discordapp.com/embed/avatars/0.png"></div>
+          <h1 id="name">loading…</h1>
+          <div class="handle" id="handle">@discord</div>
+          <div class="tagline" id="tagline">windows look • guns.lol hover • clean</div>
+
+          <div class="pills">
+            <div class="pill" title="Discord status">
+              <div id="statusDot" class="sDot offline"></div>
+              <span id="statusText">offline</span>
             </div>
+            <div class="pill" title="Views">views <span class="mono" id="views">…</span></div>
+            <div class="pill" title="Ping">ping <span class="mono" id="ping">…</span></div>
+            <div class="pill" title="Local time">time <span class="mono" id="clock">--:--</span></div>
+          </div>
 
-            <div class="volPct mono" id="volPct">55%</div>
+          <div class="links">
+            <a class="btn" href="https://github.com" target="_blank" rel="noreferrer">GitHub</a>
+            <a class="btn" href="https://x.com" target="_blank" rel="noreferrer">X</a>
+            <a class="btn" href="mailto:you@example.com">Mail</a>
+            <a class="btn" href="https://discord.com" target="_blank" rel="noreferrer">Discord</a>
           </div>
         </div>
 
-        <div class="winbtns" aria-hidden="true">
-          <div class="winbtn">—</div>
-          <div class="winbtn">▢</div>
-          <div class="winbtn close">✕</div>
+        <div class="footer">
+          <span>© <span id="year"></span></span>
+          <span class="mono">vercel • lanyard • countapi</span>
         </div>
-      </div>
-
-      <div class="content">
-        <div class="pfp"><img id="pfp" alt="pfp" src="https://cdn.discordapp.com/embed/avatars/0.png"></div>
-
-        <h1 id="name">loading…</h1>
-        <div class="handle" id="handle">@discord</div>
-
-        <div class="tagline" id="tagline">windows look • guns.lol hover • clean</div>
-
-        <div class="pills">
-          <div class="pill" title="Discord status">
-            <div id="statusDot" class="sDot offline"></div>
-            <span id="statusText">offline</span>
-          </div>
-
-          <div class="pill" title="Views">
-            views <span class="mono" id="views">…</span>
-          </div>
-
-          <div class="pill" title="Ping">
-            ping <span class="mono" id="ping">…</span>
-          </div>
-
-          <div class="pill" title="Local time">
-            time <span class="mono" id="clock">--:--</span>
-          </div>
-        </div>
-
-        <div class="links">
-          <!-- EDIT THESE -->
-          <a class="btn" href="https://github.com" target="_blank" rel="noreferrer">GitHub</a>
-          <a class="btn" href="https://x.com" target="_blank" rel="noreferrer">X</a>
-          <a class="btn" href="mailto:you@example.com">Mail</a>
-          <a class="btn" href="https://discord.com" target="_blank" rel="noreferrer">Discord</a>
-        </div>
-      </div>
-
-      <div class="footer">
-        <span>© <span id="year"></span></span>
-        <span class="mono">vercel • lanyard • countapi</span>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
 </div>
 
-<!-- MP3 audio (hidden) -->
 <audio id="bgMusic" loop preload="auto">
   <source src="/space-song-lyrics.mp3" type="audio/mpeg">
 </audio>
@@ -531,6 +461,13 @@
     tilt.style.setProperty("--my", my + "%");
   }
 
+  tilt.addEventListener("mousemove", (e) => {
+    const r = tilt.getBoundingClientRect();
+    const px = (e.clientX - r.left) / r.width;
+    const py = (e.clientX - r.top) / r.height; // corrected below
+  });
+
+  // (Fix: correct py calculation)
   tilt.addEventListener("mousemove", (e) => {
     const r = tilt.getBoundingClientRect();
     const px = (e.clientX - r.left) / r.width;
@@ -609,7 +546,7 @@
     }
   }
 
-  // MP3 audio + volume widget
+  // audio volume widget
   const audio = $("bgMusic");
   const vol = $("vol");
   const volPct = $("volPct");
@@ -617,7 +554,7 @@
   const wave1 = document.getElementById("wave1");
   const wave2 = document.getElementById("wave2");
 
-  let lastVolume = 0.55;
+  let lastVolume = 0.05;
 
   function applyVolume(v01){
     audio.volume = Math.max(0, Math.min(1, v01));
@@ -625,7 +562,7 @@
     vol.value = String(pct);
     volPct.textContent = pct + "%";
 
-    const muted = (pct === 0) || audio.muted;
+    const muted = audio.muted || pct === 0;
     wave1.style.opacity = muted ? "0" : "1";
     wave2.style.opacity = muted ? "0" : ".9";
   }
@@ -640,7 +577,7 @@
   muteBtn.addEventListener("click", () => {
     if(audio.muted || audio.volume === 0){
       audio.muted = false;
-      applyVolume(lastVolume || 0.55);
+      applyVolume(lastVolume || 0.05);
     }else{
       lastVolume = audio.volume || lastVolume;
       audio.muted = true;
@@ -648,30 +585,96 @@
     }
   });
 
-  applyVolume(0.55); // default volume
+  // default volume = 5%
+  applyVolume(0.05);
 
   async function enter(){
     if(document.body.classList.contains("entered")) return;
     document.body.classList.add("entered");
 
-    try{ await audio.play(); } catch(e){ /* rare */ }
+    try{ await audio.play(); } catch(e){}
 
     loadViews();
     loadDiscord();
   }
+  $("gate").addEventListener("click", enter);
 
-  document.getElementById("gate").addEventListener("click", enter);
+  // draggable window (titlebar drag)
+  const dragWrap = $("dragWrap");
+  const titlebar = $("titlebar");
+
+  let dragging = false;
+  let startX = 0, startY = 0;
+  let baseLeft = 0, baseTop = 0;
+
+  function getCurrentPos(){
+    // We store translate via left/top on element
+    const left = parseFloat(dragWrap.style.left || "50");
+    const top  = parseFloat(dragWrap.style.top  || "50");
+    const unitLeft = (dragWrap.style.left || "50%").includes("%") ? "%" : "px";
+    const unitTop  = (dragWrap.style.top  || "50%").includes("%") ? "%" : "px";
+    return { left, top, unitLeft, unitTop };
+  }
+
+  function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
+
+  titlebar.addEventListener("pointerdown", (e) => {
+    // don't start drag when interacting with slider/button
+    const blocked = e.target.closest(".volWidget, .winbtns");
+    if(blocked) return;
+
+    dragging = true;
+    titlebar.setPointerCapture(e.pointerId);
+
+    const rect = dragWrap.getBoundingClientRect();
+    startX = e.clientX;
+    startY = e.clientY;
+
+    // switch to px positioning for accurate drag
+    dragWrap.style.left = rect.left + "px";
+    dragWrap.style.top = rect.top + "px";
+    dragWrap.style.transform = "none";
+
+    baseLeft = rect.left;
+    baseTop = rect.top;
+  });
+
+  titlebar.addEventListener("pointermove", (e) => {
+    if(!dragging) return;
+
+    const dx = e.clientX - startX;
+    const dy = e.clientY - startY;
+
+    const winW = window.innerWidth;
+    const winH = window.innerHeight;
+
+    const rect = dragWrap.getBoundingClientRect();
+    const w = rect.width;
+    const h = rect.height;
+
+    let nextLeft = baseLeft + dx;
+    let nextTop  = baseTop + dy;
+
+    // keep inside screen with small margin
+    const margin = 10;
+    nextLeft = clamp(nextLeft, margin, winW - w - margin);
+    nextTop  = clamp(nextTop, margin, winH - h - margin);
+
+    dragWrap.style.left = nextLeft + "px";
+    dragWrap.style.top  = nextTop + "px";
+  });
+
+  titlebar.addEventListener("pointerup", () => { dragging = false; });
+  titlebar.addEventListener("pointercancel", () => { dragging = false; });
 
   // init
   $("year").textContent = new Date().getFullYear();
   setClock();
   setInterval(setClock, 10000);
 
-  // refresh discord after enter
   setInterval(() => {
     if(document.body.classList.contains("entered")) loadDiscord();
   }, 15000);
 </script>
-
 </body>
 </html>
