--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     --muted:#a8b3c7;
 
     --stroke: rgba(255,255,255,.12);
-    --panel: rgba(18,20,28,.62);
 
     --blue:#4aa3ff;
     --purple:#a78bfa;
@@ -22,14 +21,13 @@
     --gray:#64748b;
 
     --radius:12px;
-    --shadow: 0 25px 90px rgba(0,0,0,.72);
+    --shadow: 0 28px 110px rgba(0,0,0,.78);
 
     --taskbarH: 54px;
   }
 
   *{box-sizing:border-box}
   html,body{height:100%}
-
   body{
     margin:0;
     font-family:"Segoe UI",system-ui,-apple-system,Roboto,Arial,sans-serif;
@@ -38,7 +36,7 @@
     overflow:hidden;
   }
 
-  /* ===== YouTube background ===== */
+  /* ===== Background ===== */
   .bg{ position:fixed; inset:0; z-index:-3; overflow:hidden; }
   .bg iframe{
     position:absolute; top:50%; left:50%;
@@ -52,36 +50,31 @@
   .bgOverlay{
     position:fixed; inset:0; z-index:-2;
     background:
-      radial-gradient(1000px 600px at 15% 15%, rgba(74,163,255,.10), transparent 60%),
-      radial-gradient(900px 700px at 85% 25%, rgba(167,139,250,.10), transparent 60%),
-      linear-gradient(180deg, rgba(10,12,18,.55), rgba(5,6,10,.74));
+      radial-gradient(900px 520px at 15% 18%, rgba(74,163,255,.11), transparent 60%),
+      radial-gradient(820px 640px at 86% 25%, rgba(167,139,250,.11), transparent 60%),
+      linear-gradient(180deg, rgba(10,12,18,.55), rgba(5,6,10,.78));
   }
   .noise{
     pointer-events:none;
     position:fixed; inset:0; z-index:-1;
     background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='180' height='180' filter='url(%23n)' opacity='.25'/%3E%3C/svg%3E");
-    opacity:.045;
+    opacity:.05;
     mix-blend-mode: overlay;
   }
 
   /* ===== Stage ===== */
-  .stage{
-    position:fixed;
-    inset:0;
-    padding-bottom: var(--taskbarH);
-  }
+  .stage{ position:fixed; inset:0; padding-bottom:var(--taskbarH); }
 
   /* draggable container */
   .dragWrap{
     position:absolute;
-    left:50%;
-    top:50%;
+    left:50%; top:50%;
     transform: translate(-50%,-50%);
-    width:min(820px, calc(100% - 28px));
+    width:min(860px, calc(100% - 28px));
     touch-action:none;
   }
 
-  /* hover glow */
+  /* ===== guns.lol-ish hover ===== */
   .tilt{
     width:100%;
     transform-style:preserve-3d;
@@ -93,12 +86,12 @@
     content:"";
     position:absolute; inset:-2px;
     border-radius: calc(var(--radius) + 2px);
-    background: radial-gradient(720px 360px at var(--mx,50%) var(--my,50%),
-      rgba(74,163,255,.20),
-      rgba(167,139,250,.10) 40%,
-      transparent 62%);
+    background: radial-gradient(760px 380px at var(--mx,50%) var(--my,50%),
+      rgba(74,163,255,.22),
+      rgba(167,139,250,.12) 42%,
+      transparent 64%);
     opacity:0;
-    transition: opacity .16s ease;
+    transition: opacity .14s ease;
     pointer-events:none;
     filter: blur(2px);
   }
@@ -108,24 +101,24 @@
     border-radius: calc(var(--radius) + 1px);
     background: linear-gradient(120deg,
       rgba(74,163,255,0),
-      rgba(74,163,255,.20),
-      rgba(167,139,250,.16),
+      rgba(74,163,255,.22),
+      rgba(167,139,250,.18),
       rgba(74,163,255,0));
     opacity:0;
-    transition: opacity .16s ease;
+    transition: opacity .14s ease;
     pointer-events:none;
-    filter: blur(10px);
+    filter: blur(12px);
   }
   .tilt:hover::before,.tilt:hover::after{opacity:1}
 
-  /* window */
+  /* ===== Window ===== */
   .window{
     border-radius:var(--radius);
     overflow:hidden;
-    border:1px solid var(--stroke);
-    background: linear-gradient(180deg, rgba(18,20,28,.70), rgba(18,20,28,.45));
-    backdrop-filter: blur(16px);
-    -webkit-backdrop-filter: blur(16px);
+    border:1px solid rgba(255,255,255,.13);
+    background: linear-gradient(180deg, rgba(18,20,28,.72), rgba(18,20,28,.42));
+    backdrop-filter: blur(18px);
+    -webkit-backdrop-filter: blur(18px);
     box-shadow: var(--shadow);
 
     transform: translateY(10px);
@@ -139,26 +132,27 @@
     pointer-events:auto;
   }
 
-  /* minimized state */
-  body.minimized .window{
+  /* minimized/closed -> hide window, keep taskbar */
+  body.minimized .window,
+  body.closed .window{
     opacity:0;
     pointer-events:none;
     transform: translateY(16px);
   }
 
   .titlebar{
-    height:40px;
+    height:42px;
     display:flex;
     justify-content:space-between;
     align-items:center;
     padding:0 10px 0 12px;
     background:rgba(255,255,255,.05);
-    border-bottom:1px solid rgba(255,255,255,.08);
+    border-bottom:1px solid rgba(255,255,255,.085);
     user-select:none;
     gap:10px;
-    cursor: grab;
+    cursor:grab;
   }
-  .titlebar:active{ cursor: grabbing; }
+  .titlebar:active{cursor:grabbing}
 
   .title{
     display:flex;
@@ -166,7 +160,7 @@
     gap:8px;
     font-size:13px;
     font-weight:650;
-    color:rgba(242,246,255,.92);
+    color:rgba(242,246,255,.93);
     white-space:nowrap;
   }
   .icon{
@@ -177,31 +171,65 @@
 
   .winbtns{display:flex; flex:0 0 auto;}
   .winbtn{
-    width:45px;
-    text-align:center;
-    padding:6px 0;
+    width:46px;
+    height:42px;
+    display:grid;
+    place-items:center;
     border-left:1px solid rgba(255,255,255,.06);
-    color:rgba(242,246,255,.85);
+    color:rgba(242,246,255,.86);
     cursor:pointer;
   }
   .winbtn:hover{background:rgba(255,255,255,.08)}
-  .winbtn.close:hover{background:rgba(239,68,68,.25)}
+  .winbtn.close:hover{background:rgba(239,68,68,.26)}
+  .winbtn.disabled{
+    opacity:.35;
+    cursor:not-allowed;
+  }
+  .winbtn.disabled:hover{background:transparent}
 
-  /* content (symmetrisch) */
-  .content{ padding:26px 22px 22px; text-align:center; }
+  /* ===== Content (symmetrisch) ===== */
+  .content{ padding:28px 24px 22px; text-align:center; }
 
-  .pfp{
-    width:104px; height:104px;
+  .pfpWrap{
+    width:108px; height:108px;
     margin: 6px auto 12px;
-    border-radius:12px;
+    position:relative;
+  }
+  .pfp{
+    width:108px; height:108px;
+    border-radius:14px;
     overflow:hidden;
-    border:1px solid rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.16);
     background:rgba(255,255,255,.03);
   }
   .pfp img{width:100%;height:100%;object-fit:cover;display:block}
 
-  h1{ margin:0; font-size:24px; font-weight:900; letter-spacing:.2px; line-height:1.15; }
-  .handle{ margin-top:6px; font-size:13px; color:var(--muted); font-weight:700; }
+  /* status dot on pfp (black skin) */
+  .pfpStatus{
+    position:absolute;
+    right:-2px;
+    bottom:-2px;
+    width:18px;
+    height:18px;
+    border-radius:999px;
+    background: #0b0d13;                 /* black skin */
+    border:1px solid rgba(255,255,255,.10);
+    box-shadow: 0 10px 30px rgba(0,0,0,.55);
+    display:grid;
+    place-items:center;
+  }
+  .pfpStatus .dot{
+    width:10px; height:10px;
+    border-radius:999px;
+    background: var(--gray);
+  }
+  .dot.online{background:var(--green)}
+  .dot.idle{background:var(--amber)}
+  .dot.dnd{background:var(--red)}
+  .dot.offline{background:var(--gray)}
+
+  h1{ margin:0; font-size:24px; font-weight:950; letter-spacing:.2px; line-height:1.15; }
+  .handle{ margin-top:6px; font-size:13px; color:var(--muted); font-weight:750; }
   .tagline{ margin-top:10px; font-size:14px; color:var(--muted); line-height:1.5; }
 
   .pills{
@@ -226,17 +254,15 @@
     transform: rotate(18deg);
     background: linear-gradient(90deg, transparent, rgba(255,255,255,.18), transparent);
     opacity:0;
-    transition: left .38s ease, opacity .18s ease;
+    transition: left .36s ease, opacity .16s ease;
     pointer-events:none;
   }
-  .pill:hover{ transform: translateY(-1px); border-color: rgba(74,163,255,.35); background: rgba(74,163,255,.06); }
+  .pill:hover{
+    transform: translateY(-1px);
+    border-color: rgba(74,163,255,.35);
+    background: rgba(74,163,255,.06);
+  }
   .pill:hover::before{opacity:1; left:120%}
-
-  .sDot{width:9px;height:9px;border-radius:50%;background:var(--gray)}
-  .sDot.online{background:var(--green)}
-  .sDot.idle{background:var(--amber)}
-  .sDot.dnd{background:var(--red)}
-  .sDot.offline{background:var(--gray)}
 
   .links{ display:flex; justify-content:center; flex-wrap:wrap; gap:10px; margin-top:18px; }
   .btn{
@@ -248,7 +274,7 @@
     text-decoration:none;
     color:var(--text);
     font-size:12.5px;
-    font-weight:800;
+    font-weight:850;
     transition: transform .12s ease, border-color .12s ease, background .12s ease;
   }
   .btn:hover{ transform: translateY(-1px); border-color: rgba(255,255,255,.22); background: rgba(255,255,255,.07); }
@@ -265,7 +291,7 @@
 
   audio{display:none}
 
-  /* click-to-enter overlay */
+  /* click-to-enter */
   .gate{
     position:fixed; inset:0;
     display:grid; place-items:center;
@@ -278,7 +304,7 @@
   }
   body.entered .gate{opacity:0; pointer-events:none;}
   .gateText{
-    font-size:26px; font-weight:800;
+    font-size:26px; font-weight:850;
     color: rgba(242,246,255,.95);
     text-shadow: 0 10px 30px rgba(0,0,0,.55);
     letter-spacing:.2px;
@@ -286,7 +312,7 @@
   .gateText .dots{ opacity:.9; animation:dots 1.2s infinite; }
   @keyframes dots{ 0%,20%{opacity:.3} 50%{opacity:1} 100%{opacity:.3} }
 
-  /* ===== TASKBAR ===== */
+  /* ===== Taskbar ===== */
   .taskbar{
     position:fixed;
     left:0; right:0; bottom:0;
@@ -307,10 +333,7 @@
     pointer-events:none;
     transition: opacity .35s ease;
   }
-  body.entered .taskbar{
-    opacity:1;
-    pointer-events:auto;
-  }
+  body.entered .taskbar{opacity:1; pointer-events:auto;}
 
   .tbLeft,.tbRight{display:flex; align-items:center; gap:8px;}
   .tbCenter{flex:1; display:flex; justify-content:center; align-items:center; gap:8px;}
@@ -345,7 +368,7 @@
   }
 
   .appBtn{
-    min-width:160px;
+    min-width:170px;
     height:38px;
     padding:0 12px;
     border-radius:10px;
@@ -366,30 +389,24 @@
     width:14px;height:14px;border-radius:4px;
     background: linear-gradient(135deg,var(--blue),var(--purple));
   }
-  .appName{
-    font-size:12.5px;
-    font-weight:800;
-    color: rgba(242,246,255,.92);
-    white-space:nowrap;
-  }
+  .appName{ font-size:12.5px; font-weight:900; color: rgba(242,246,255,.92); white-space:nowrap; }
   .appIndicator{
     margin-left:auto;
-    width:26px;
-    height:4px;
+    width:26px; height:4px;
     border-radius:999px;
     background: rgba(255,255,255,.14);
     position:relative;
     overflow:hidden;
   }
-  body.minimized .appIndicator::after{ opacity:.35; }
   .appIndicator::after{
     content:"";
     position:absolute; inset:0;
     background: rgba(74,163,255,.65);
     opacity:.95;
   }
+  body.minimized .appIndicator::after,
+  body.closed .appIndicator::after{opacity:.30}
 
-  /* system tray: volume + clock */
   .tray{
     display:flex;
     align-items:center;
@@ -450,19 +467,19 @@
   }
   .clockTime{
     font-size:12.5px;
-    font-weight:900;
+    font-weight:950;
     color: rgba(242,246,255,.92);
   }
   .clockDate{
     margin-top:2px;
     font-size:11px;
     color: rgba(168,179,199,.92);
-    font-weight:700;
+    font-weight:750;
   }
 
   @media (max-width: 820px){
     .volRange{width:120px}
-    .appBtn{min-width:140px}
+    .appBtn{min-width:150px}
   }
   @media (max-width: 560px){
     .volRange{width:90px}
@@ -495,23 +512,25 @@
           <div class="titlebar" id="titlebar">
             <div class="title"><div class="icon"></div> discord.exe</div>
             <div class="winbtns">
-              <div class="winbtn" id="btnMin">—</div>
-              <div class="winbtn" id="btnMax">▢</div>
-              <div class="winbtn close" id="btnClose">✕</div>
+              <div class="winbtn" id="btnMin" title="Minimize">—</div>
+              <div class="winbtn disabled" id="btnMax" title="Disabled">▢</div>
+              <div class="winbtn close" id="btnClose" title="Close">✕</div>
             </div>
           </div>
 
           <div class="content">
-            <div class="pfp"><img id="pfp" alt="pfp" src="https://cdn.discordapp.com/embed/avatars/0.png"></div>
+            <div class="pfpWrap">
+              <div class="pfp"><img id="pfp" alt="pfp" src="https://cdn.discordapp.com/embed/avatars/0.png"></div>
+              <div class="pfpStatus" title="status">
+                <div class="dot offline" id="pfpDot"></div>
+              </div>
+            </div>
+
             <h1 id="name">loading…</h1>
             <div class="handle" id="handle">@discord</div>
             <div class="tagline" id="tagline">windows look • guns.lol hover • clean</div>
 
             <div class="pills">
-              <div class="pill" title="Discord status">
-                <div id="statusDot" class="sDot offline"></div>
-                <span id="statusText">offline</span>
-              </div>
               <div class="pill" title="Views">views <span class="mono" id="views">…</span></div>
               <div class="pill" title="Ping">ping <span class="mono" id="ping">…</span></div>
             </div>
@@ -584,7 +603,7 @@
   const COUNT_KEY = "views";
   const $ = (id) => document.getElementById(id);
 
-  // ===== guns.lol-ish hover tilt =====
+  // ===== hover tilt =====
   const tilt = $("tilt");
   const maxTilt = 7;
 
@@ -642,10 +661,11 @@
 
   // ===== discord =====
   function msPing(start){ return Math.max(0, Math.round(performance.now() - start)); }
-  function setStatus(status){
+
+  function setPfpStatusDot(status){
     const s = status || "offline";
-    $("statusText").textContent = s;
-    $("statusDot").className = "sDot " + s;
+    const el = $("pfpDot");
+    el.className = "dot " + s;
   }
 
   async function loadDiscord(){
@@ -659,7 +679,7 @@
       if(!d){
         $("name").textContent = "unknown";
         $("handle").textContent = "@discord";
-        setStatus("offline");
+        setPfpStatusDot("offline");
         return;
       }
 
@@ -674,13 +694,13 @@
         $("pfp").src = "https://cdn.discordapp.com/embed/avatars/0.png";
       }
 
-      setStatus(d.discord_status || "offline");
+      setPfpStatusDot(d.discord_status || "offline");
     }catch{
-      setStatus("offline");
+      setPfpStatusDot("offline");
     }
   }
 
-  // ===== audio + taskbar volume =====
+  // ===== audio + volume =====
   const audio = $("bgMusic");
   const vol = $("vol");
   const muteBtn = $("muteBtn");
@@ -720,7 +740,7 @@
   // default volume = 5%
   applyVolume(0.05);
 
-  // ===== enter gate =====
+  // ===== enter =====
   async function enter(){
     if(document.body.classList.contains("entered")) return;
     document.body.classList.add("entered");
@@ -732,36 +752,45 @@
   }
   $("gate").addEventListener("click", enter);
 
-  // ===== minimize/restore to taskbar =====
-  function minimize(){ document.body.classList.add("minimized"); }
-  function restore(){ document.body.classList.remove("minimized"); }
-  function toggleMinimize(){
+  // ===== minimize/close behavior =====
+  function minimize(){
+    document.body.classList.add("minimized");
+    document.body.classList.remove("closed");
+  }
+  function closeWindow(){
+    // "close" = hide window, keep taskbar (guns.lol vibe)
+    document.body.classList.add("closed");
+    document.body.classList.remove("minimized");
+  }
+  function restore(){
+    document.body.classList.remove("minimized");
+    document.body.classList.remove("closed");
+  }
+  function toggleFromTaskbar(){
     if(!document.body.classList.contains("entered")) return;
-    document.body.classList.toggle("minimized");
+    if(document.body.classList.contains("minimized") || document.body.classList.contains("closed")){
+      restore();
+    }else{
+      minimize();
+    }
   }
 
-  $("appToggle").addEventListener("click", toggleMinimize);
   $("btnMin").addEventListener("click", minimize);
-  $("btnClose").addEventListener("click", minimize);
-  $("btnMax").addEventListener("click", () => {
-    // quick "re-center"
-    const w = $("dragWrap");
-    w.style.left = "50%";
-    w.style.top = "50%";
-    w.style.transform = "translate(-50%,-50%)";
-  });
+  $("btnClose").addEventListener("click", closeWindow);
+  // fullscreen disabled: do nothing
+  $("btnMax").addEventListener("click", (e) => { e.preventDefault(); });
+
+  $("appToggle").addEventListener("click", toggleFromTaskbar);
 
   // ===== draggable window =====
   const dragWrap = $("dragWrap");
   const titlebar = $("titlebar");
-
   let dragging=false, startX=0, startY=0, baseLeft=0, baseTop=0;
 
   function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
 
   titlebar.addEventListener("pointerdown", (e) => {
-    // only drag when not minimized
-    if(document.body.classList.contains("minimized")) return;
+    if(document.body.classList.contains("minimized") || document.body.classList.contains("closed")) return;
 
     dragging = true;
     titlebar.setPointerCapture(e.pointerId);
@@ -811,9 +840,7 @@
   setInterval(setClock, 10000);
 
   setInterval(() => {
-    if(document.body.classList.contains("entered") && !document.body.classList.contains("minimized")) {
-      loadDiscord();
-    }
+    if(document.body.classList.contains("entered")) loadDiscord();
   }, 15000);
 </script>
 </body>
