--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   :root{
     --text:#f2f6ff;
     --muted:#a8b3c7;
-
     --stroke: rgba(255,255,255,.12);
 
     --blue:#4aa3ff;
@@ -62,7 +61,6 @@
     mix-blend-mode: overlay;
   }
 
-  /* ===== Stage ===== */
   .stage{ position:fixed; inset:0; padding-bottom:var(--taskbarH); }
 
   /* draggable container */
@@ -181,13 +179,8 @@
   }
   .winbtn:hover{background:rgba(255,255,255,.08)}
   .winbtn.close:hover{background:rgba(239,68,68,.26)}
-  .winbtn.disabled{
-    opacity:.35;
-    cursor:not-allowed;
-  }
-  .winbtn.disabled:hover{background:transparent}
 
-  /* ===== Content (symmetrisch) ===== */
+  /* ===== Content ===== */
   .content{ padding:28px 24px 22px; text-align:center; }
 
   .pfpWrap{
@@ -204,7 +197,6 @@
   }
   .pfp img{width:100%;height:100%;object-fit:cover;display:block}
 
-  /* status dot on pfp (black skin) */
   .pfpStatus{
     position:absolute;
     right:-2px;
@@ -212,7 +204,7 @@
     width:18px;
     height:18px;
     border-radius:999px;
-    background: #0b0d13;                 /* black skin */
+    background: #0b0d13;
     border:1px solid rgba(255,255,255,.10);
     box-shadow: 0 10px 30px rgba(0,0,0,.55);
     display:grid;
@@ -264,20 +256,32 @@
   }
   .pill:hover::before{opacity:1; left:120%}
 
-  .links{ display:flex; justify-content:center; flex-wrap:wrap; gap:10px; margin-top:18px; }
-  .btn{
-    display:inline-flex; align-items:center;
-    padding:10px 12px;
-    border-radius:10px;
-    border:1px solid rgba(255,255,255,.12);
-    background:rgba(255,255,255,.03);
-    text-decoration:none;
-    color:var(--text);
-    font-size:12.5px;
-    font-weight:850;
-    transition: transform .12s ease, border-color .12s ease, background .12s ease;
+  /* Icon links (TikTok/Discord/YouTube) */
+  .iconLinks{
+    display:flex;
+    justify-content:center;
+    gap:12px;
+    margin-top:18px;
   }
-  .btn:hover{ transform: translateY(-1px); border-color: rgba(255,255,255,.22); background: rgba(255,255,255,.07); }
+  .iBtn{
+    width:44px;
+    height:44px;
+    border-radius:12px;
+    border:1px solid rgba(255,255,255,.12);
+    background: rgba(255,255,255,.04);
+    display:grid;
+    place-items:center;
+    cursor:pointer;
+    transition: transform .12s ease, background .12s ease, border-color .12s ease;
+    text-decoration:none;
+    color: rgba(242,246,255,.92);
+  }
+  .iBtn:hover{
+    transform: translateY(-2px);
+    background: rgba(255,255,255,.07);
+    border-color: rgba(255,255,255,.20);
+  }
+  .iBtn svg{ width:22px; height:22px; opacity:.92; }
 
   .footer{
     padding:10px 15px;
@@ -465,17 +469,8 @@
     padding:0 2px;
     min-width:64px;
   }
-  .clockTime{
-    font-size:12.5px;
-    font-weight:950;
-    color: rgba(242,246,255,.92);
-  }
-  .clockDate{
-    margin-top:2px;
-    font-size:11px;
-    color: rgba(168,179,199,.92);
-    font-weight:750;
-  }
+  .clockTime{ font-size:12.5px; font-weight:950; color: rgba(242,246,255,.92); }
+  .clockDate{ margin-top:2px; font-size:11px; color: rgba(168,179,199,.92); font-weight:750; }
 
   @media (max-width: 820px){
     .volRange{width:120px}
@@ -513,7 +508,6 @@
             <div class="title"><div class="icon"></div> discord.exe</div>
             <div class="winbtns">
               <div class="winbtn" id="btnMin" title="Minimize">—</div>
-              <div class="winbtn disabled" id="btnMax" title="Disabled">▢</div>
               <div class="winbtn close" id="btnClose" title="Close">✕</div>
             </div>
           </div>
@@ -535,11 +529,34 @@
               <div class="pill" title="Ping">ping <span class="mono" id="ping">…</span></div>
             </div>
 
-            <div class="links">
-              <a class="btn" href="https://github.com" target="_blank" rel="noreferrer">GitHub</a>
-              <a class="btn" href="https://x.com" target="_blank" rel="noreferrer">X</a>
-              <a class="btn" href="mailto:you@example.com">Mail</a>
-              <a class="btn" href="https://discord.com" target="_blank" rel="noreferrer">Discord</a>
+            <!-- icon buttons -->
+            <div class="iconLinks">
+              <!-- EDIT YOUR LINKS HERE -->
+              <a class="iBtn" href="https://www.tiktok.com" target="_blank" rel="noreferrer" title="TikTok">
+                <!-- TikTok icon (simple) -->
+                <svg viewBox="0 0 24 24" fill="none">
+                  <path d="M14 4v10.2a3.8 3.8 0 1 1-3-3.7V8.2a6 6 0 1 0 6 6V9.3c1 .8 2.2 1.3 3.5 1.4V8.1c-1.7-.2-3.1-1.4-3.8-3.1H14Z"
+                        stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
+                </svg>
+              </a>
+
+              <a class="iBtn" href="https://discord.com" target="_blank" rel="noreferrer" title="Discord">
+                <!-- Discord-ish icon -->
+                <svg viewBox="0 0 24 24" fill="none">
+                  <path d="M8.6 7.4c1-.5 2.2-.8 3.4-.8s2.4.3 3.4.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+                  <path d="M7 8.8c-1 1.7-1.6 3.7-1.6 5.8 1.6 1.2 3.7 1.9 6.6 1.9s5-.7 6.6-1.9c0-2.1-.6-4.1-1.6-5.8-1.2-.7-2.5-1.2-4-1.4l-.6 1" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
+                  <path d="M10 13.2h.01M14 13.2h.01" stroke="currentColor" stroke-width="2.6" stroke-linecap="round"/>
+                </svg>
+              </a>
+
+              <a class="iBtn" href="https://www.youtube.com" target="_blank" rel="noreferrer" title="YouTube">
+                <!-- YouTube play icon -->
+                <svg viewBox="0 0 24 24" fill="none">
+                  <path d="M20 8.4a3 3 0 0 0-2.1-2.2C16.2 5.7 12 5.7 12 5.7s-4.2 0-5.9.5A3 3 0 0 0 4 8.4 31 31 0 0 0 3.7 12c0 1.2.1 2.4.3 3.6A3 3 0 0 0 6.1 18c1.7.5 5.9.5 5.9.5s4.2 0 5.9-.5A3 3 0 0 0 20 15.6c.2-1.2.3-2.4.3-3.6 0-1.2-.1-2.4-.3-3.6Z"
+                        stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
+                  <path d="M11 10.2 14.8 12 11 13.8v-3.6Z" fill="currentColor"/>
+                </svg>
+              </a>
             </div>
           </div>
 
@@ -603,7 +620,7 @@
   const COUNT_KEY = "views";
   const $ = (id) => document.getElementById(id);
 
-  // ===== hover tilt =====
+  // hover tilt
   const tilt = $("tilt");
   const maxTilt = 7;
 
@@ -633,19 +650,14 @@
     tilt.style.setProperty("--my", "50%");
   });
 
-  // ===== clock + date =====
+  // clock + date
   function setClock(){
     const d = new Date();
-    const hh = String(d.getHours()).padStart(2,"0");
-    const mm = String(d.getMinutes()).padStart(2,"0");
-    $("clock").textContent = `${hh}:${mm}`;
-
-    const day = String(d.getDate()).padStart(2,"0");
-    const mon = String(d.getMonth()+1).padStart(2,"0");
-    $("date").textContent = `${day}.${mon}`;
+    $("clock").textContent = String(d.getHours()).padStart(2,"0") + ":" + String(d.getMinutes()).padStart(2,"0");
+    $("date").textContent = String(d.getDate()).padStart(2,"0") + "." + String(d.getMonth()+1).padStart(2,"0");
   }
 
-  // ===== views =====
+  // views
   async function loadViews(){
     try{
       const r = await fetch(`https://api.countapi.xyz/hit/${encodeURIComponent(COUNT_NAMESPACE)}/${encodeURIComponent(COUNT_KEY)}`, { cache:"no-store" });
@@ -659,13 +671,11 @@
     }
   }
 
-  // ===== discord =====
+  // discord
   function msPing(start){ return Math.max(0, Math.round(performance.now() - start)); }
-
   function setPfpStatusDot(status){
     const s = status || "offline";
-    const el = $("pfpDot");
-    el.className = "dot " + s;
+    $("pfpDot").className = "dot " + s;
   }
 
   async function loadDiscord(){
@@ -700,7 +710,7 @@
     }
   }
 
-  // ===== audio + volume =====
+  // audio + taskbar volume (default 5%)
   const audio = $("bgMusic");
   const vol = $("vol");
   const muteBtn = $("muteBtn");
@@ -737,28 +747,26 @@
     }
   });
 
-  // default volume = 5%
   applyVolume(0.05);
 
-  // ===== enter =====
+  // enter gate
   async function enter(){
     if(document.body.classList.contains("entered")) return;
     document.body.classList.add("entered");
 
-    try{ await audio.play(); } catch(e){}
+    try{ await audio.play(); }catch(e){}
 
     loadViews();
     loadDiscord();
   }
   $("gate").addEventListener("click", enter);
 
-  // ===== minimize/close behavior =====
+  // minimize / close
   function minimize(){
     document.body.classList.add("minimized");
     document.body.classList.remove("closed");
   }
   function closeWindow(){
-    // "close" = hide window, keep taskbar (guns.lol vibe)
     document.body.classList.add("closed");
     document.body.classList.remove("minimized");
   }
@@ -777,34 +785,28 @@
 
   $("btnMin").addEventListener("click", minimize);
   $("btnClose").addEventListener("click", closeWindow);
-  // fullscreen disabled: do nothing
-  $("btnMax").addEventListener("click", (e) => { e.preventDefault(); });
-
   $("appToggle").addEventListener("click", toggleFromTaskbar);
 
-  // ===== draggable window =====
+  // draggable window
   const dragWrap = $("dragWrap");
   const titlebar = $("titlebar");
-  let dragging=false, startX=0, startY=0, baseLeft=0, baseTop=0;
 
+  let dragging=false, startX=0, startY=0, baseLeft=0, baseTop=0;
   function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
 
   titlebar.addEventListener("pointerdown", (e) => {
     if(document.body.classList.contains("minimized") || document.body.classList.contains("closed")) return;
-
     dragging = true;
     titlebar.setPointerCapture(e.pointerId);
 
     const rect = dragWrap.getBoundingClientRect();
-    startX = e.clientX;
-    startY = e.clientY;
+    startX = e.clientX; startY = e.clientY;
 
     dragWrap.style.left = rect.left + "px";
-    dragWrap.style.top = rect.top + "px";
+    dragWrap.style.top  = rect.top + "px";
     dragWrap.style.transform = "none";
 
-    baseLeft = rect.left;
-    baseTop = rect.top;
+    baseLeft = rect.left; baseTop = rect.top;
   });
 
   titlebar.addEventListener("pointermove", (e) => {
