--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     </svg>
                   </a>
 
-                  <a class="iBtn" href="https://discord.com" target="_blank" rel="noreferrer" title="Discord">
+                  <a class="iBtn" href="https://discord.gg/r357sBphNu" target="_blank" rel="noreferrer" title="Discord">
                     <svg viewBox="0 0 24 24" fill="none">
                       <path d="M8.6 7.4c1-.5 2.2-.8 3.4-.8s2.4.3 3.4.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
                       <path d="M7 8.8c-1 1.7-1.6 3.7-1.6 5.8 1.6 1.2 3.7 1.9 6.6 1.9s5-.7 6.6-1.9c0-2.1-.6-4.1-1.6-5.8-1.2-.7-2.5-1.2-4-1.4l-.6 1" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
@@ -1046,3 +1046,4 @@
 </script>
 </body>
 </html>
+
